<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/bar_chart_text"-->
<!--        android:textColor="@color/black"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginBottom="8dp"/>-->
<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/barChatButton"-->
<!--        android:backgroundTint="@color/purple_500"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="@string/bar_chart"/>-->


<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/pie_chart_text"-->
<!--        android:textColor="@color/black"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:layout_marginTop="20dp"/>-->
<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/pieChatButton"-->
<!--        android:backgroundTint="@color/purple_500"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="@string/pie_chart"/>-->

<!-- -->

<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/radar_chart_text"-->
<!--        android:textColor="@color/black"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:layout_marginTop="20dp"/>-->

<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/radarChatButton"-->
<!--        android:backgroundTint="@color/purple_500"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="@string/radar_chart"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line_chart_text"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lineChatButton"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:text="@string/example_of_line_chart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/half_pie_chart_text"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/halfPieChatButton"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:text="@string/example_of_half_pie_chart"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiple_bar_chart_text"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/multipleBarChatButton"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:text="example of Multiple bar chart"/>

</LinearLayout>